# Mercury

./: .clang-format  .gitignore  .gitmodules  404.html  :w  CMakeLists.txt  README.md  browsing-streams.html  feed.xml  format.sh  hosting-streams.html  hstp_options.txt  index.html  joining-streams.html  pre-commit  server-hosting.html  settings.html
.github/workflows/: jekyll.yml
app/: CMakeLists.txt  Info.plist  Info.plist.in  audioinputlistmodel.h  grabwindowstest.cpp  grabwindowstest.h  grabwindowstest.ui  hoststreamwindow.cpp  hoststreamwindow.h  hoststreamwindow.ui  hoverlabel.h  joinstreamwindow.cpp  joinstreamwindow.h  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  networkmanager.cpp  networkmanager.h  screenlistmodel.cpp  screenlistmodel.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  streampreviewwindow.cpp  streampreviewwindow.h  utils.cpp  windowlistmodel.cpp  windowlistmodel.h  windowmanager.cpp  windowmanager.h
app/api/: mapi.cpp  mapi.hpp
app/config/: filedownloader.cpp  filedownloader.hpp  mconfig.cpp  mconfig.hpp
app/configControl/: mconfig.cpp  mconfig.hpp
app/home/: hoststreamwindow.cpp  hoststreamwindow.h  hoststreamwindow.ui  joinstreamwindow.cpp  joinstreamwindow.h  joinstreamwindow.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  toastnotification.cpp  toastnotification.h  utils.cpp  utils.h
app/singleton/: audiomanager.cpp  audiomanager.hpp  videomanager.cpp  videomanager.h
app/src/: hoststreamwindow.cpp  hoststreamwindow.h  hoststreamwindow.ui  joinstreamwindow.h  mainwindow.cpp  mainwindow.ui  settingswindow.cpp  utils.h
app/stream/: annotationdisplay.cpp  annotationdisplay.hpp  audiowaveformwidget.cpp  audiowaveformwidget.hpp  chatpane.cpp  chatpane.hpp  hosttoolbar.hpp  mutestreambutton.cpp  mutestreambutton.hpp  painttoolwidget.cpp  painttoolwidget.hpp  performancetab.cpp  performancetab.hpp  qualitycontrolbutton.cpp  qualitycontrolbutton.hpp  reactiondisplay.cpp  reactiondisplay.hpp  reactionpanel.cpp  reactionpanel.hpp  sidepane.cpp  sidepane.hpp  streamcontrolpanel.cpp  streamcontrolpanel.hpp  streamdisplay.cpp  streamdisplay.hpp  streamdisplaycontrols.cpp  streamdisplaycontrols.hpp  streaminfo.cpp  streaminfo.hpp  streamservice.hpp  streamwindow.cpp  streamwindow.hpp  volumecontrolwidget.cpp  volumecontrolwidget.hpp
app/streambrowser/: streambrowser.cpp  streambrowser.h
app/streampreview/: audioinputlistmodel.cpp  audioinputlistmodel.h  screenlistmodel.h  streampreviewwindow.cpp  streampreviewwindow.h
app/test/: mercury_test.cpp
assets/: fart.raw  mercury.icns
assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
config/: DefaultClientSettings.ini  MercuryClientSettings.ini
docs/: Gemfile  ServerHosting.md  _config.yml  browsing-streams.md  hosting-streams.md  hstp_options.txt  index.md  joining-streams.md  server-hosting.md  settings.md
docs/features/: annotations.md  chat.md  index.md  performance.md  reactions.md  stream-control-panel.md  viewer-list.md
docs/getting-started/: index.md  installation.md  overview.md
features/: annotations.html  chat.html  index.html  performance.html  reactions.html  stream-control-panel.html  viewer-list.html
getting-started/: index.html  installation.html  overview.html
netlib/: CMakeLists.txt  netlib_tester.cpp
netlib/include/: hstp.hpp  logger.hpp  mercury_client.hpp  mercury_server.hpp  metrics.hpp  mftp.hpp  mnet.hpp  netlib_global.h
netlib/src/: hstp.cpp  logger.cpp  mercury_client.cpp  mercury_server.cpp  mftp.cpp  mftp.hpp  mnet.cpp
netlib/test/: client_test.cpp  hstp_test.cpp  mftp_test.cpp  netlib_test.cpp
styles/: dark.qss  light.qss
workflows/: jekyll.yml
